--- a/static/index.html
+++ b/static/index.html
@@ -4,13 +4,14 @@
     <link rel="stylesheet" media="screen" href="/static/bootstrap.min.css">
   </head>
   <body>
-    <div class="jumbotron">
-      <div class="container">
-        <h1 class="display-3">Wine Predictor</h1>
-        <p>
-          Some cool content will go here
-        </p>
-        <p>
+    <div class="container">
+      <div class="jumbotron">
+        <div class="container">
+          <h1 class="display-3">Wine Predictor</h1>
+          <p>
+            Some cool content will go here
+          </p>
+          <p>
           <form action="/get_results" method="post">
             <p>Alcohol</p>
             <input type="text" name="Alcohol" value="12.82">
@@ -41,7 +42,8 @@
             <br>
             <input type="submit" class="btn btn-primary btn-lg" value="Predict!">
           </form>
-        </p>
+          </p>
+        </div>
       </div>
     </div>
   </body>
