Changed image and inputs of application

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
       This is the title that appears in the browser tab.
       Replace it with the title of your app
     -->
-    <title>Spring Fawn Predictor</title>
+    <title>Animal Crossing Review Predictor</title>
     <link rel="stylesheet" media="screen" href="/static/bootstrap.min.css">
     <!-- If you add custom CSS, put it after the above bootstrap link -->
   </head>
@@ -17,7 +17,7 @@
       -->
       <div class="jumbotron">
         <!-- Replace with the name of your app-->
-        <h1 class="display-4">Spring Fawn Predictor</h1>
+        <h1 class="display-4">Animal Crossing Review Predictor</h1>
       </div>
       <!-- This section contains a photo + the form for the user to enter data-->
       <div class="container"> 
@@ -28,14 +28,10 @@
               applicable). It will automatically fill the same width as the
               template version due to CSS styling.
             -->
-            <img src="/static/antelope_photo.jpg" alt="antelope" style="width: 100%;">
-            <span style="font-size: small;">Photo by
-              <a href="https://unsplash.com/@bluespot?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">
-                Eshwar charan
-              </a>
-              on
-              <a href="https://unsplash.com/s/photos/antelope-wyoming?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">
-                Unsplash
+            <img src="/static/acnh_box_art.jpg" alt="ACNH NA boxart" style="width: 100%;">
+            <span style="font-size: small;">Photo taken from
+              <a href="https://store.nintendo.com/animal-crossing-new-horizons.html">
+                Nintendo Online Store
               </a>
             </span>
           </div>
@@ -56,25 +52,8 @@
               nested <div>s to achieve the desired layout
             -->
             <form action="/make_prediction" method="post">
-              <label for="input-1">Adult Antelope Population (Hundreds)</label>
+              <label for="input-1">Write your review here:</label>
               <input type="text" id="input-1" name="adult_antelope_population" value="7.2">
-              <br>
-              <label for="input-2">Annual Precipitation (Inches)</label>
-              <input type="text" id="input-2" name="annual_precipitation" value="10.8">
-              <br>
-              <label for="input-3">Winter Severity Index</label>
-              <!--
-                Note on "select" (drop-down): the value is what is sent as the
-                value in the params dictionary, the text between the tags is
-                what the user sees
-              -->
-              <select id="input-3" name="winter_severity_index">
-                <option value="1.0">1 (Mild)</option>
-                <option value="2.0">2</option>
-                <option value="3.0">3</option>
-                <option value="4.0">4</option>
-                <option value="5.0">5 (Severe)</option>
-              </select>
               <br>
               <!-- You shouldn't need to change the submit button -->
               <input type="submit" class="btn btn-primary btn-lg" value="Predict!">
