Uploaded model and text processing function into app

--- a/static/index.html
+++ b/static/index.html
@@ -53,10 +53,11 @@
             -->
             <form action="/make_prediction" method="post">
               <label for="input-1">Write your review here:</label>
-              <input type="text" id="input-1" name="adult_antelope_population" value="7.2">
+              <textarea id="input-1" name="review_text" rows="10" cols="50">
+                </textarea>
               <br>
               <!-- You shouldn't need to change the submit button -->
-              <input type="submit" class="btn btn-primary btn-lg" value="Predict!">
+              <input type="submit" class="btn btn-primary btn-lg" value="Submit">
             </form>
           </div>
         </div>  
