Adjusted text and images of the app to reflect theme of project

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
       This is the title that appears in the browser tab.
       Replace it with the title of your app
     -->
-    <title>Animal Crossing Review Predictor</title>
+    <title>Animal Crossing: New Horizons Sentiment Rater</title>
     <link rel="stylesheet" media="screen" href="/static/bootstrap.min.css">
     <!-- If you add custom CSS, put it after the above bootstrap link -->
   </head>
@@ -17,7 +17,7 @@
       -->
       <div class="jumbotron">
         <!-- Replace with the name of your app-->
-        <h1 class="display-4">Animal Crossing Review Predictor</h1>
+        <h1 class="display-4">Animal Crossing: New Horizons Sentiment Rater</h1>
       </div>
       <!-- This section contains a photo + the form for the user to enter data-->
       <div class="container"> 
@@ -53,7 +53,7 @@
             -->
             <form action="/make_prediction" method="post">
               <label for="input-1">Write your review here:</label>
-              <textarea id="input-1" name="review_text" rows="10" cols="50">
+              <textarea id="input-1" name="review_text" rows="10" cols="40">
                 </textarea>
               <br>
               <!-- You shouldn't need to change the submit button -->
@@ -72,17 +72,8 @@
           previous line
         -->
         <p>
-          Some cool content will go here
-        </p>
-        <p>
-          This app predicts the number of spring fawns in an antelope
-          population, based on data from the Bureau of Land Management
-        </p>
-        <p>
-          More hence that dear evenly gulped much opposite seagull some from regardless more prudently so rational howled as much
-          out inclusive heinous melodious. And however one that chose much a as as went and bled hello wow gracefully wolf joyfully drew some amongst reckless much
-          dear shut excellent caribou glowered moistly this up telepathic characteristically one. Far when irrational well adoring or buffalo then much and a and and iguana due monkey some where instead this forlorn
-          macaw swift and and the much evident hey far goodness yikes jeez conductively.
+          This app predicts the sentiment of a review for Animal Crossing: New Horizons without
+          the need for a graded scale or any supplementary raters. Just raw, opinionated text.
         </p>
       </div>
     </div>
